--- a/2. Second homework (WIP)/app/Dockerfile
+++ b/2. Second homework (WIP)/app/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1
-FROM python:3.8
+FROM python:3.8-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
