--- a/2. Second homework (WIP)/dockerized playbook/roles/deploy/defaults/main.yml
+++ b/2. Second homework (WIP)/dockerized playbook/roles/deploy/defaults/main.yml
@@ -2,12 +2,12 @@
 # defaults file for deploy
 
 # set the username of the server user
-user: rainbow
+user: YOUR_USER
 
 app_dest: jsonservice
 
 # set a domain name of the server or an IP address
-address: '192.168.0.29'
+address: 'YOUR_IP'
 
 # set an SSL key params
 size: 4096
