--- a/2. Second homework/dockerized playbook/roles/deploy/defaults/main.yml
+++ b/2. Second homework/dockerized playbook/roles/deploy/defaults/main.yml
@@ -11,3 +11,9 @@ address: 'YOUR_IP'
 
 # set an SSL key params
 size: 4096
+
+# sources file source
+source: /etc/apt/sources.list
+
+# set SLL mode
+auto_ssl: true
