--- a/2. Second homework/dockerized playbook/roles/security/defaults/main.yml
+++ b/2. Second homework/dockerized playbook/roles/security/defaults/main.yml
@@ -11,4 +11,4 @@ sshd: ssh
 sshd_config: /etc/ssh/sshd_config
 
 # set the location of your ssh key
-key_location: /home/putin228/.ssh/id_rsa.pub
+key_location: /home/rainbow/.ssh/id_rsa.pub
