--- a/2. Second homework/dockerized playbook/roles/deploy/files/app/nginx/nginx.conf
+++ b/2. Second homework/dockerized playbook/roles/deploy/files/app/nginx/nginx.conf
@@ -2,10 +2,11 @@ server {
 
     listen 8080;
     listen 44443 ssl;
-    server_name "IP";
+    server_name 'IP';
     
     ssl_certificate     /etc/nginx/ssl/jsonservice.crt;
     ssl_certificate_key /etc/nginx/ssl/jsonservice.key;
+    ssl_password_file   /etc/nginx/ssl/keys/ssl_password_file;
     
     location / {
         proxy_pass http://flask:5555;
