--- a/2. Second homework/playbook/roles/deploy/defaults/main.yml
+++ b/2. Second homework/playbook/roles/deploy/defaults/main.yml
@@ -2,15 +2,21 @@
 # defaults file for deploy
 
 # set the username of the server user
-user: YOUR_USER
+user: ----YOUR_USER----
 
 app_dest: jsonservice
 
 # set a domain name of the server or an IP address
-address: 'YOUR_VM_IP'
+address: '----TARGET_MACHINE_ADDRESS-----'
 
 # set an SSL key params
 size: 4096
 
-# set SLL mode
-auto_ssl: true
+# sources file source
+source: /etc/apt/sources.list
+
+# set SSL mode and/or passphrase
+auto_ssl: false          #can be true or false
+ssl_passphrase: false  #can be true or false
+passphrase: "R@Inb0wGr@v1ty"            #enter your passphrase here
+cipher: aes256
