--- a/2. Second homework/playbook/roles/install/tasks/main.yml
+++ b/2. Second homework/playbook/roles/install/tasks/main.yml
@@ -11,6 +11,12 @@
     name: python3-pip 
     state: latest
 
+- name: Upgrade pip
+  pip:
+    name: pip
+    executable: pip3
+    state: latest
+
 - name: Install Python3-venv package
   apt: 
     name: python3-venv 
